--- a/src/css/5-advertisement.css
+++ b/src/css/5-advertisement.css
@@ -23,7 +23,7 @@ desktop padding:top 50px padding-bottom: 50px) */
   gap: 28px;
 
   background-color: #0c0c0c;
-  background-image: url(../images/advertisement/advertisement.png);
+  background-image: url(../images/advertisement/advertisement.webp);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -67,7 +67,7 @@ desktop padding:top 50px padding-bottom: 50px) */
 
 @media screen and (max-width: 767px) and (min-resolution: 192dpi) {
   .advertisement .container {
-    background-image: url(../images/advertisement/advertisement@2x.png);
+    background-image: url(../images/advertisement/advertisement@2x.webp);
   }
 }
 
@@ -77,7 +77,7 @@ desktop padding:top 50px padding-bottom: 50px) */
   }
 
   .advertisement .container {
-    background-image: url(../images/advertisement/advertisement-tablet.png);
+    background-image: url(../images/advertisement/advertisement-tablet.webp);
     max-width: 704px;
     max-height: 425px;
 
@@ -95,7 +95,7 @@ desktop padding:top 50px padding-bottom: 50px) */
 
 @media screen and (min-width: 768px) and (min-resolution: 192dpi) {
   .advertisement .container {
-    background-image: url(../images/advertisement/advertisement-tablet@2x.png);
+    background-image: url(../images/advertisement/advertisement-tablet@2x.webp);
   }
 }
 
@@ -105,7 +105,7 @@ desktop padding:top 50px padding-bottom: 50px) */
   }
 
   .advertisement .container {
-    background-image: url(../images/advertisement/advertisement-desktop.png);
+    background-image: url(../images/advertisement/advertisement-desktop.webp);
     max-width: 1150px;
     max-height: 298px;
 
@@ -120,6 +120,6 @@ desktop padding:top 50px padding-bottom: 50px) */
 
 @media screen and (min-width: 1280px) and (min-resolution: 192dpi) {
   .advertisement .container {
-    background-image: url(../images/advertisement/advertisement-desktop@2x.png);
+    background-image: url(../images/advertisement/advertisement-desktop@2x.webp);
   }
 }
