--- a/src/partials/4-catalog.html
+++ b/src/partials/4-catalog.html
@@ -5,20 +5,38 @@
       <li class="catalog-item">
         <div class="catalog-box">
           <picture>
-            <source media="(min-width: 1280px)" srcset="
-                ./images/catalog/catalog_desktop_1.png    1x,
-                ./images/catalog/catalog_desktop_1@2x.png 2x
-              " type="image/png" />
-            <source media="(min-width: 768px)" srcset="
-                ./images/catalog/catalog_tablet_1.png    1x,
-                ./images/catalog/catalog_tablet_1@2x.png 2x
-              " type="image/png" />
-            <source media="(max-width: 767px)" srcset="
-                ./images/catalog/catalog_1.png    1x,
-                ./images/catalog/catalog_1@2x.png 2x
-              " type="image/png" />
-            <img class="catalog-img" src="./images/catalog/catalog_1.png" alt="Garmin Fenix 7X Pro" width="208"
-              height="226" loading="lazy" />
+            <source
+              media="(min-width: 1280px)"
+              srcset="
+                ./images/catalog/catalog_desktop_1.webp    1x,
+                ./images/catalog/catalog_desktop_1@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ./images/catalog/catalog_tablet_1.webp    1x,
+                ./images/catalog/catalog_tablet_1@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ./images/catalog/catalog_1.webp    1x,
+                ./images/catalog/catalog_1@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <img
+              class="catalog-img"
+              src="./images/catalog/catalog_1.webp"
+              alt="Garmin Fenix 7X Pro"
+              width="208"
+              height="226"
+              loading="lazy"
+            />
           </picture>
         </div>
         <div class="catalog-text-list">
@@ -29,20 +47,38 @@
       <li class="catalog-item">
         <div class="catalog-box">
           <picture>
-            <source media="(min-width: 1280px)" srcset="
-                ./images/catalog/catalog_desktop_2.png    1x,
-                ./images/catalog/catalog_desktop_2@2x.png 2x
-              " type="image/png" />
-            <source media="(min-width: 768px)" srcset="
-                ./images/catalog/catalog_tablet_2.png    1x,
-                ./images/catalog/catalog_tablet_2@2x.png 2x
-              " type="image/png" />
-            <source media="(max-width: 767px)" srcset="
-                ./images/catalog/catalog_2.png    1x,
-                ./images/catalog/catalog_2@2x.png 2x
-              " type="image/png" />
-            <img class="catalog-img" src="./images/catalog/catalog_2.png" alt="Garmin Fenix 7X Pro" width="208"
-              height="226" loading="lazy" />
+            <source
+              media="(min-width: 1280px)"
+              srcset="
+                ./images/catalog/catalog_desktop_2.webp    1x,
+                ./images/catalog/catalog_desktop_2@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ./images/catalog/catalog_tablet_2.webp    1x,
+                ./images/catalog/catalog_tablet_2@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ./images/catalog/catalog_2.webp    1x,
+                ./images/catalog/catalog_2@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <img
+              class="catalog-img"
+              src="./images/catalog/catalog_2.webp"
+              alt="Garmin Fenix 7X Pro"
+              width="208"
+              height="226"
+              loading="lazy"
+            />
           </picture>
         </div>
         <div class="catalog-text-list">
@@ -53,20 +89,38 @@
       <li class="catalog-item">
         <div class="catalog-box">
           <picture>
-            <source media="(min-width: 1280px)" srcset="
-                ./images/catalog/catalog_desktop_3.png    1x,
-                ./images/catalog/catalog_desktop_3@2x.png 2x
-              " type="image/png" />
-            <source media="(min-width: 768px)" srcset="
-                ./images/catalog/catalog_tablet_3.png    1x,
-                ./images/catalog/catalog_tablet_3@2x.png 2x
-              " type="image/png" />
-            <source media="(max-width: 767px)" srcset="
-                ./images/catalog/catalog_3.png    1x,
-                ./images/catalog/catalog_3@2x.png 2x
-              " type="image/png" />
-            <img class="catalog-img" src="../images/catalog/catalog_3.png" alt="Garmin Fenix 7X Pro" width="208"
-              height="226" loading="lazy" />
+            <source
+              media="(min-width: 1280px)"
+              srcset="
+                ./images/catalog/catalog_desktop_3.webp    1x,
+                ./images/catalog/catalog_desktop_3@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ./images/catalog/catalog_tablet_3.webp    1x,
+                ./images/catalog/catalog_tablet_3@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ./images/catalog/catalog_3.webp    1x,
+                ./images/catalog/catalog_3@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <img
+              class="catalog-img"
+              src="../images/catalog/catalog_3.webp"
+              alt="Garmin Fenix 7X Pro"
+              width="208"
+              height="226"
+              loading="lazy"
+            />
           </picture>
         </div>
         <div class="catalog-text-list">
@@ -77,20 +131,38 @@
       <li class="catalog-item">
         <div class="catalog-box">
           <picture>
-            <source media="(min-width: 1280px)" srcset="
-                ./images/catalog/catalog_desktop_4.png    1x,
-                ./images/catalog/catalog_desktop_4@2x.png 2x
-              " type="image/png" />
-            <source media="(min-width: 768px)" srcset="
-                ./images/catalog/catalog_tablet_4.png    1x,
-                ./images/catalog/catalog_tablet_4@2x.png 2x
-              " type="image/png" />
-            <source media="(max-width: 767px)" srcset="
-                ./images/catalog/catalog_4.png    1x,
-                ./images/catalog/catalog_4@2x.png 2x
-              " type="image/png" />
-            <img class="catalog-img" src="./images/catalog/catalog_4.png" alt="Garmin Fenix 7X Pro" width="208"
-              height="226" loading="lazy" />
+            <source
+              media="(min-width: 1280px)"
+              srcset="
+                ./images/catalog/catalog_desktop_4.webp    1x,
+                ./images/catalog/catalog_desktop_4@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ./images/catalog/catalog_tablet_4.webp    1x,
+                ./images/catalog/catalog_tablet_4@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ./images/catalog/catalog_4.webp    1x,
+                ./images/catalog/catalog_4@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <img
+              class="catalog-img"
+              src="./images/catalog/catalog_4.webp"
+              alt="Garmin Fenix 7X Pro"
+              width="208"
+              height="226"
+              loading="lazy"
+            />
           </picture>
         </div>
         <div class="catalog-text-list">
@@ -101,20 +173,38 @@
       <li class="catalog-item catalog-item-hide">
         <div class="catalog-box">
           <picture>
-            <source media="(min-width: 1280px)" srcset="
-                ./images/catalog/catalog_desktop_5.png    1x,
-                ./images/catalog/catalog_desktop_5@2x.png 2x
-              " type="image/png" />
-            <source media="(min-width: 768px)" srcset="
-                ./images/catalog/catalog_tablet_5.png    1x,
-                ./images/catalog/catalog_tablet_5@2x.png 2x
-              " type="image/png" />
-            <source media="(max-width: 767px)" srcset="
-                ./images/catalog/catalog_tablet_5.png    1x,
-                ./images/catalog/catalog_tablet_5@2x.png 2x
-              " type="image/png" />
-            <img class="catalog-img" src="./images/catalog/catalog_desktop_5.png" alt="Garmin Fenix 7X Pro" width="292"
-              height="292" loading="lazy" />
+            <source
+              media="(min-width: 1280px)"
+              srcset="
+                ./images/catalog/catalog_desktop_5.webp    1x,
+                ./images/catalog/catalog_desktop_5@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ./images/catalog/catalog_tablet_5.webp    1x,
+                ./images/catalog/catalog_tablet_5@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ./images/catalog/catalog_tablet_5.webp    1x,
+                ./images/catalog/catalog_tablet_5@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <img
+              class="catalog-img"
+              src="./images/catalog/catalog_desktop_5.webp"
+              alt="Garmin Fenix 7X Pro"
+              width="292"
+              height="292"
+              loading="lazy"
+            />
           </picture>
         </div>
         <div class="catalog-text-list">
@@ -125,20 +215,38 @@
       <li class="catalog-item catalog-item-hide">
         <div class="catalog-box">
           <picture>
-            <source media="(min-width: 1280px)" srcset="
-                ./images/catalog/catalog_desktop_6.png    1x,
-                ./images/catalog/catalog_desktop_6@2x.png 2x
-              " type="image/png" />
-            <source media="(min-width: 768px)" srcset="
-                ./images/catalog/catalog_tablet_6.png    1x,
-                ./images/catalog/catalog_tablet_6@2x.png 2x
-              " type="image/png" />
-            <source media="(max-width: 767px)" srcset="
-                ./images/catalog/catalog_tablet_6.png    1x,
-                ./images/catalog/catalog_tablet_6@2x.png 2x
-              " type="image/png" />
-            <img class="catalog-img" src="./images/catalog/catalog_desktop_6.png" alt="Garmin Fenix 7X Pro" width="292"
-              height="292" loading="lazy" />
+            <source
+              media="(min-width: 1280px)"
+              srcset="
+                ./images/catalog/catalog_desktop_6.webp    1x,
+                ./images/catalog/catalog_desktop_6@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ./images/catalog/catalog_tablet_6.webp    1x,
+                ./images/catalog/catalog_tablet_6@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ./images/catalog/catalog_tablet_6.webp    1x,
+                ./images/catalog/catalog_tablet_6@2x.webp 2x
+              "
+              type="image/png"
+            />
+            <img
+              class="catalog-img"
+              src="./images/catalog/catalog_desktop_6.webp"
+              alt="Garmin Fenix 7X Pro"
+              width="292"
+              height="292"
+              loading="lazy"
+            />
           </picture>
         </div>
         <div class="catalog-text-list">
