--- a/src/css/1-header.css
+++ b/src/css/1-header.css
@@ -37,7 +37,7 @@
       rgba(12, 12, 12, 0.92),
       rgba(12, 12, 12, 0.92)
     ),
-    url('../images/header/mob_menu/mobile_menu.jpg');
+    url('../images/header/mob_menu/mobile_menu.webp');
   transform: translateX(100%);
   transition: transform 275ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -317,7 +317,7 @@
         rgba(12, 12, 12, 0.92),
         rgba(12, 12, 12, 0.92)
       ),
-      url('../images/header/mob_menu/mobile_menu@2x.jpg');
+      url('../images/header/mob_menu/mobile_menu@2x.webp');
   }
 }
 @media only screen and (min-width: 768px) {
@@ -326,7 +326,7 @@
         rgba(12, 12, 12, 0.92),
         rgba(12, 12, 12, 0.92)
       ),
-      url('../images/header/mob_menu/mobile_menu_tabl.jpg');
+      url('../images/header/mob_menu/mobile_menu_tabl.webp');
   }
 }
 @media only screen and (min-width: 768px) and (min-resolution: 192dpi) {
@@ -335,7 +335,7 @@
         rgba(12, 12, 12, 0.92),
         rgba(12, 12, 12, 0.92)
       ),
-      url('../images/header/mob_menu/mobile_menu_tabl@2x.jpg');
+      url('../images/header/mob_menu/mobile_menu_tabl@2x.webp');
   }
 }
 
