--- a/src/partials/3-about-us.html
+++ b/src/partials/3-about-us.html
@@ -14,7 +14,7 @@
         your personality and style. So why settle for anything less than the
         best?
       </p>
-      <a class="about-btn">View catalog</a>
+      <a class="about-btn" href="catalog">View catalog</a>
     </div>
     <div class="about-img-div">
       <picture>
