--- a/src/partials/2-hero.html
+++ b/src/partials/2-hero.html
@@ -17,29 +17,29 @@
           <source
             media="(min-width: 1280px)"
             srcset="
-              ./images/hero/hero_scroll_desktop.webp      1x,
-              ./images/hero/hero_scroll_desktop@2x.webp2x
+              ./images/hero/hero_scroll_desktop.webp    1x,
+              ./images/hero/hero_scroll_desktop@2x.webp 2x
             "
             type="image/png"
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              ./images/hero/hero_scroll_tablet.webp      1x,
-              ./images/hero/hero_scroll_tablet@2x.webp2x
+              ./images/hero/hero_scroll_tablet.webp    1x,
+              ./images/hero/hero_scroll_tablet@2x.webp 2x
             "
             type="image/png"
           />
           <source
             media="(max-width: 767px)"
             srcset="
-              ./images/hero/hero_scroll.webp      1x,
-              ./images/hero/hero_scroll@2x.webp2x
+              ./images/hero/hero_scroll.webp    1x,
+              ./images/hero/hero_scroll@2x.webp 2x
             "
             type="image/png"
           />
           <img
-            src="./images/hero/hero_scroll.png"
+            src="./images/hero/hero_scroll.webp"
             alt="team"
             width="108"
             height="44"
