--- a/src/partials/9-footer.html
+++ b/src/partials/9-footer.html
@@ -1,47 +1,55 @@
 <footer id="footer" class="footer-container section-animation">
   <div class="footer-page">
-    <div>
-      <a class="footer-page-logo" href="./index.html">watchcharm</a>
-      <ul class="footer-icon-list">
-        <li class="footer-item-icon">
-          <a
-            class="footer-icon-link"
-            href="https://www.facebook.com/goITclub/"
-            target="_blank"
-          >
-            <svg class="footer-icon-social" width="20" height="20">
-              <use href="./images/icons.svg#icon-facebook"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="footer-item-icon">
-          <a
-            class="footer-icon-link"
-            href="https://www.instagram.com/goitclub/"
-            target="_blank"
-          >
-            <svg class="footer-icon-social" width="20" height="20">
-              <use href="./images/icons.svg#icon-instagram"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="footer-item-icon">
-          <a
-            class="footer-icon-link"
-            href="https://www.youtube.com/c/GoIT"
-            target="_blank"
-          >
-            <svg class="footer-icon-social" width="20" height="20">
-              <use href="./images/icons.svg#icon-youtube"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="footer-tel-cont">
-      <a class="footer-tel-link" href="tel:+380684439426"
-        >+380 (68) 443-94-26</a
-      >
+    <div class="footer-position-cont">
+      <div>
+        <a class="footer-page-logo" href="./index.html">watchcharm</a>
+        <ul class="footer-icon-list">
+          <li class="footer-item-icon">
+            <a
+              class="footer-icon-link"
+              href="https://www.facebook.com/goITclub/"
+              target="_blank"
+              referrerpolicy="no-referrer"
+              aria-label="Open facebook"
+            >
+              <svg class="footer-icon-social" width="18" height="20">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-item-icon">
+            <a
+              class="footer-icon-link"
+              href="https://www.instagram.com/goitclub/"
+              target="_blank"
+              referrerpolicy="no-referrer"
+              aria-label="Open instagram"
+            >
+              <svg class="footer-icon-social" width="18" height="20">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-item-icon">
+            <a
+              class="footer-icon-link"
+              href="https://www.youtube.com/c/GoIT"
+              target="_blank"
+              referrerpolicy="no-referrer"
+              aria-label="Open youtube"
+            >
+              <svg class="footer-icon-social" width="18" height="20">
+                <use href="./images/icons.svg#icon-youtube"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-tel-cont">
+        <a class="footer-tel-link" href="tel:+380684439426"
+          >+380 (68) 443-94-26</a
+        >
+      </div>
     </div>
     <div class="footer-text-cont">
       <p class="footer-text">
@@ -52,22 +60,24 @@
     <div class="footer-navig">
       <ul class="footer-navig-list">
         <li class="footer-navig-item">
-          <a href="#home">Home</a>
+          <a href="#home" aria-label="Go to Home page">Home</a>
         </li>
         <li class="footer-navig-item">
-          <a href="#about-us">About Us</a>
+          <a href="#about-us" aria-label="Learn more About Us">About Us</a>
         </li>
         <li class="footer-navig-item">
-          <a href="#catalog">Catalog</a>
+          <a href="#catalog" aria-label="Browse our Catalog">Catalog</a>
         </li>
         <li class="footer-navig-item">
-          <a href="#sale">Sale</a>
+          <a href="#sale" aria-label="Check out our Sale items">Sale</a>
         </li>
         <li class="footer-navig-item">
-          <a href="#reviews">Reviews</a>
+          <a href="#reviews" aria-label="Read our Reviews">Reviews</a>
         </li>
         <li class="footer-navig-item">
-          <a class="about" href="#contact-us">Contact Us</a>
+          <a class="about" href="#contact-us" aria-label="Get in touch with us"
+            >Contact Us</a
+          >
         </li>
       </ul>
       <p class="footer-navig-text">
@@ -78,9 +88,16 @@
       <span class="underline"></span>
       <p class="footer-bt-date">©2023 The Watch Spot. All rights reserved.</p>
       <span class="footer-service">
-        <a class="footer-privacy" href="#">Terms of Service</a>
+        <a
+          class="footer-privacy"
+          href="#"
+          aria-label="Read our Terms of Service"
+          >Terms of Service</a
+        >
       </span>
-      <a class="footer-privacy" href="#">Privacy Policy</a>
+      <a class="footer-privacy" href="#" aria-label="Read our Privacy Policy"
+        >Privacy Policy</a
+      >
     </div>
   </div>
 </footer>
