--- a/src/css/8-contact-us.css
+++ b/src/css/8-contact-us.css
@@ -44,7 +44,7 @@
   border-radius: 30px;
   max-width: 100%;
   min-height: 512px;
-  background-color: var(--card);
+  background-color: var(--cards);
 }
 @media only screen and (min-width: 768px) {
   .contact-modal {
