--- a/src/partials/8-contact-us.html
+++ b/src/partials/8-contact-us.html
@@ -41,6 +41,7 @@
               required
               pattern="^\+\d{3}-\d{2}-\d{3}-\d{2}-\d{2}$"
               aria-label="input field telephone"
+              title=" +380-XX-XXX-XX-XX"
             />
           </div>
           <div class="contact-input-container">
