--- a/src/css/6-sale.css
+++ b/src/css/6-sale.css
@@ -11,30 +11,28 @@
 
 @media only screen and (min-width: 1280px) {
     .sale {
-        padding: 50px 0;
+    padding: 50px 0;
     }
 }
 
 h2.sale-title {
 /* Mobile/H2 */
-color: var(--main);
-font-family: Gilroy;
-font-size: 32px;
-font-style: normal;
-font-weight: 600;
-line-height: 32px;
-letter-spacing: -0.64px;
-margin-bottom: 24px;
+    color: var(--main);
+    font-family: Gilroy;
+    font-size: 32px;
+    font-weight: 600;
+    margin-bottom: 24px;
+    line-height: 1;
+    letter-spacing: -0.02em;
 }
 
 @media only screen and (min-width: 768px) {
   h2.sale-title {
-    margin-bottom: 40px;
-        /* Desktop_tablet/H2 */
+    /* Desktop_tablet/H2 */
     font-size: 48px;
-    line-height: 44px;
-        /* 91.667% */
-    letter-spacing: -0.96px;
+    line-height: 0.92;
+    letter-spacing: -0.02em;
+    margin-bottom: 40px;    
   }
 }
 
@@ -55,12 +53,12 @@ margin-bottom: 24px;
 
 .picture-wrapper {
     display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-        flex-direction: row;
-        gap: 20px;
-        max-width: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 20px;
+    max-width: 100%;
 }
 
 .items-example {
@@ -72,10 +70,10 @@ margin-bottom: 24px;
 @media only screen and (min-width: 768px) {
   .items-example {
     display: flex;
-        gap: 10px;
-        flex-direction: column;
-        max-width: 132px;
-        row-gap: 10px;
+    gap: 10px;
+    flex-direction: column;
+    max-width: 132px;
+    row-gap: 10px;
   }
 }
 
@@ -83,7 +81,6 @@ margin-bottom: 24px;
     display: flex;
     justify-content: center;
     width: calc((100% - 3 * 5px) / 4);
-    /* height: 80px; */
     flex-shrink: 0;
     border-radius: 16px;
     border: 1px solid rgba(12, 12, 12, 0.05);
@@ -93,9 +90,8 @@ margin-bottom: 24px;
 
 @media only screen and (min-width: 768px) {
   .sale-item-picture {
+    width: 100%;
     padding: 16px 18px 16px 18px;
-    width: 132px;
-    height: 132px;
     border-radius: 20px;
   }
 }
@@ -125,7 +121,7 @@ margin-bottom: 24px;
     .sale-main-pic {
     width: 428px;
     height: 558px;
-    padding: 50px;
+    padding: 80px 50px;
 
     }
 }
@@ -145,136 +141,141 @@ margin-bottom: 24px;
 
 @media only screen and (min-width: 1280px) {
     .sale-description-container {
-        max-width: 530px;
-        height: 558px;
+    max-width: 530px;
+    height: 558px;
     }
 }
 
 .sale-description-title {
-color: var(--background);
+    color: var(--background);
     /* Mobile/H3 */
     font-size: 24px;
-    font-style: normal;
     font-weight: 600;
-    line-height: 28px;
-    letter-spacing: -0.48px;
+    line-height: 1.17;
+    letter-spacing: -0.02em;
+    margin-bottom: 10px;
 }
 
 @media only screen and (min-width: 768px) {
   .sale-description-title {
-        /* Desktop_tablet/H3 */
-        font-size: 32px;
-        line-height: 36px;
-        letter-spacing: -0.64px;
-        max-width: 436px;
+    /* Desktop_tablet/H3 */
+    font-size: 32px;
+    line-height: 1.125;
+    letter-spacing: -0.02em;
+    max-width: 436px; 
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .sale-description-title {
+    max-width: 389px;
   }
 }
 
 .product-tag {
-    color: rgba(251, 251, 251, 0.50);
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 18px;
-        /* 128.571% */
-        letter-spacing: -0.28px;
-        margin-bottom: 20px;
+    margin-bottom: 20px;
+    font-weight: 400;        
+    font-size: 14px;
+    line-height: 1.29;       
+    letter-spacing: -0.02em;
+    color: rgba(251, 251, 251, 0.5);
 }
 
 .sale-price {
-display: flex;
-align-items:center;
+    display: flex;
+    align-items:center;
+    gap: 9px;
+    margin-bottom: 28px;
+}
 
-gap: 9px;
-margin-bottom: 28px;
-
+@media only screen and (min-width: 768px) {
+  .sale-price {
+    margin-bottom: 30px;
+  }
 }
 
 .price-tag {
     border-radius: 8px;
-        background-color: rgba(251, 251, 251, 0.10);
+    background-color: rgba(251, 251, 251, 0.10);
     color: var(--background);
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 20px;
-        letter-spacing: -0.32px;
-        width: 68px;
-        height: 32px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    font-size: 16px;
+    padding: 8px 12px;
+    font-weight: 600;
+    line-height: 1.25;
+    letter-spacing: -0.02em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @media only screen and (min-width: 768px) {
   .price-tag {
-    width: 78px;
-        font-size: 20px;
-        letter-spacing: -0.4px;
+    font-size: 20px;
+    line-height: 1;
+    letter-spacing: -0.02em;
   }
 }
 
 .price-crossed {
-    color: rgba(251, 251, 251, 0.50);
-        font-family: Gilroy;
-        font-size: 12px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 14px;
-        /* 116.667% */
-        letter-spacing: -0.24px;
-        text-decoration: line-through;
+    font-weight: 400;        
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: -0.02em;
+    text-decoration: line-through;
+    color: rgba(251, 251, 251, 0.5);
 }
 
   .item-description-text {
-color: rgba(251, 251, 251, 0.70);
     /* Mobile/Main text */
-    font-size: 14px;
-    font-style: normal;
     font-weight: 500;
-    line-height: 18px;
-    letter-spacing: -0.28px;
+    font-size: 14px;
+    line-height: 1.29;
+    letter-spacing: -0.02em;
+    color: rgba(251, 251, 251, 0.7);
+    font-style: normal;
     margin-bottom: 28px;
+    
   }
 
 @media only screen and (min-width: 768px) {
   .item-description-text {
         /* Desktop_tablet/Main text */
-        font-size: 16px;
-        line-height: 20px;
-        letter-spacing: -0.32px;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: -0.02em;
+    margin-bottom: 40px;
   }
 }
 
 .sale-item-features {
-        display: flex;
-        align-items: flex-start;
-        align-content: flex-start;
-        gap: 8px;
-        flex-wrap: wrap;
+    display: flex;
+    align-items: flex-start;
+    align-content: flex-start;
+    gap: 8px;
+    flex-wrap: wrap;
 }
 
 .sale-features-item {
     display: flex;
-        padding: 8px 12px;
-        justify-content: center;
-        align-items: center;
-        border-radius: 8px;
-        border: 1px solid rgba(251, 251, 251, 0.20);
+    padding: 8px 12px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    border: 1px solid rgba(251, 251, 251, 0.20);
 }
 
 .feature-text {
-color: var(--background);
-    font-size: 12px;
+    color: var(--background);
     font-style: normal;
     font-weight: 500;
-    line-height: 16px;
+    font-size: 12px;
+    line-height: 1.33;
 }
 
 @media only screen and (min-width: 768px) {
 .feature-text {
     font-size: 14px;
-    line-height: 18px;
+    line-height: 1.29;
   }
 }
 
