--- a/src/css/8-contact-us.css
+++ b/src/css/8-contact-us.css
@@ -142,6 +142,7 @@ textarea::placeholder {
   scroll-behavior: unset;
   overflow-x: hidden;
   overflow-y: hidden;
+  resize: none;
   transition: border-color 275ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media only screen and (min-width: 768px) {
