--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -5,6 +5,7 @@
   src: url('../fonts/Gilroy-Regular.ttf');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
   src: url('../fonts/Gilroy-Bold.ttf');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -19,6 +21,7 @@
   src: url('../fonts/Gilroy-Semibold.ttf');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -26,6 +29,7 @@
   src: url('../fonts/Gilroy-Medium.ttf');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 body {
