--- a/src/partials/2-hero.html
+++ b/src/partials/2-hero.html
@@ -20,7 +20,7 @@
               ./images/hero/hero_scroll_desktop.webp    1x,
               ./images/hero/hero_scroll_desktop@2x.webp 2x
             "
-            type="image/png"
+            type="image/webp"
           />
           <source
             media="(min-width: 768px)"
@@ -28,7 +28,7 @@
               ./images/hero/hero_scroll_tablet.webp    1x,
               ./images/hero/hero_scroll_tablet@2x.webp 2x
             "
-            type="image/png"
+            type="image/webp"
           />
           <source
             media="(max-width: 767px)"
@@ -36,7 +36,7 @@
               ./images/hero/hero_scroll.webp    1x,
               ./images/hero/hero_scroll@2x.webp 2x
             "
-            type="image/png"
+            type="image/webp"
           />
           <img
             src="./images/hero/hero_scroll.webp"
@@ -57,7 +57,7 @@
           ./images/hero/hero_watch_desktop.webp    1x,
           ./images/hero/hero_watch_desktop@2x.webp 2x
         "
-        type="image/jpg"
+        type="image/webp"
       />
       <source
         media="(min-width: 768px)"
@@ -65,7 +65,7 @@
           ./images/hero/hero_watch_tablet.webp    1x,
           ./images/hero/hero_watch_tablet@2x.webp 2x
         "
-        type="image/jpg"
+        type="image/webp"
       />
       <source
         media="(max-width: 767px)"
@@ -73,7 +73,7 @@
           ./images/hero/hero_watch.webp    1x,
           ./images/hero/hero_watch@2x.webp 2x
         "
-        type="image/jpg"
+        type="image/webp"
       />
 
       <img
