--- a/src/partials/4-catalog.html
+++ b/src/partials/4-catalog.html
@@ -11,7 +11,7 @@
                 ./images/catalog/catalog_desktop_1.webp    1x,
                 ./images/catalog/catalog_desktop_1@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <source
               media="(min-width: 768px)"
@@ -19,7 +19,7 @@
                 ./images/catalog/catalog_tablet_1.webp    1x,
                 ./images/catalog/catalog_tablet_1@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <source
               media="(max-width: 767px)"
@@ -27,7 +27,7 @@
                 ./images/catalog/catalog_1.webp    1x,
                 ./images/catalog/catalog_1@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <img
               class="catalog-img"
@@ -53,7 +53,7 @@
                 ./images/catalog/catalog_desktop_2.webp    1x,
                 ./images/catalog/catalog_desktop_2@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <source
               media="(min-width: 768px)"
@@ -61,7 +61,7 @@
                 ./images/catalog/catalog_tablet_2.webp    1x,
                 ./images/catalog/catalog_tablet_2@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <source
               media="(max-width: 767px)"
@@ -69,7 +69,7 @@
                 ./images/catalog/catalog_2.webp    1x,
                 ./images/catalog/catalog_2@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <img
               class="catalog-img"
@@ -95,7 +95,7 @@
                 ./images/catalog/catalog_desktop_3.webp    1x,
                 ./images/catalog/catalog_desktop_3@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <source
               media="(min-width: 768px)"
@@ -103,7 +103,7 @@
                 ./images/catalog/catalog_tablet_3.webp    1x,
                 ./images/catalog/catalog_tablet_3@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <source
               media="(max-width: 767px)"
@@ -111,7 +111,7 @@
                 ./images/catalog/catalog_3.webp    1x,
                 ./images/catalog/catalog_3@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <img
               class="catalog-img"
@@ -137,7 +137,7 @@
                 ./images/catalog/catalog_desktop_4.webp    1x,
                 ./images/catalog/catalog_desktop_4@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <source
               media="(min-width: 768px)"
@@ -145,7 +145,7 @@
                 ./images/catalog/catalog_tablet_4.webp    1x,
                 ./images/catalog/catalog_tablet_4@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <source
               media="(max-width: 767px)"
@@ -153,7 +153,7 @@
                 ./images/catalog/catalog_4.webp    1x,
                 ./images/catalog/catalog_4@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <img
               class="catalog-img"
@@ -179,7 +179,7 @@
                 ./images/catalog/catalog_desktop_5.webp    1x,
                 ./images/catalog/catalog_desktop_5@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <source
               media="(min-width: 768px)"
@@ -187,7 +187,7 @@
                 ./images/catalog/catalog_tablet_5.webp    1x,
                 ./images/catalog/catalog_tablet_5@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <source
               media="(max-width: 767px)"
@@ -195,7 +195,7 @@
                 ./images/catalog/catalog_tablet_5.webp    1x,
                 ./images/catalog/catalog_tablet_5@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <img
               class="catalog-img"
@@ -221,7 +221,7 @@
                 ./images/catalog/catalog_desktop_6.webp    1x,
                 ./images/catalog/catalog_desktop_6@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <source
               media="(min-width: 768px)"
@@ -229,7 +229,7 @@
                 ./images/catalog/catalog_tablet_6.webp    1x,
                 ./images/catalog/catalog_tablet_6@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <source
               media="(max-width: 767px)"
@@ -237,7 +237,7 @@
                 ./images/catalog/catalog_tablet_6.webp    1x,
                 ./images/catalog/catalog_tablet_6@2x.webp 2x
               "
-              type="image/png"
+              type="image/webp"
             />
             <img
               class="catalog-img"
