--- a/src/partials/6-sale.html
+++ b/src/partials/6-sale.html
@@ -1,4 +1,4 @@
-<section class="sale">
+<section class="sale section-animation" id="sale">
   <div class="container">
     <h2 class="sale-title">Sale</h2>
     <div class="salewrapper" sale>
@@ -6,70 +6,165 @@
         <ul class="items-example">
           <li class="sale-item-picture">
             <picture>
-              <source media="(min-width:768px)" srcset="./images/sale/clock-desk-tabl9.webp 1x, 
-            ./images/sale/clock-desk-tabl10@2x.webp 2x" type="image/png">
-              <source media="(max-width:767px)" srcset="./images/sale/clock-tel9.webp 1x, 
-            ./images/sale/clock-tel10@2x.webp 2x" type="image/png">
-              <img class="watch-example" src="./images/sale/clock-desk-tabl9.webp" alt="watch front mode 1" width="96"
-                height="100" loading="lazy" />
+              <source
+                media="(min-width:768px)"
+                srcset="
+                  ./images/sale/clock-desk-tabl9.webp     1x,
+                  ./images/sale/clock-desk-tabl10@2x.webp 2x
+                "
+                type="image/webp"
+              />
+              <source
+                media="(max-width:767px)"
+                srcset="
+                  ./images/sale/clock-tel9.webp     1x,
+                  ./images/sale/clock-tel10@2x.webp 2x
+                "
+                type="image/webp"
+              />
+              <img
+                class="watch-example"
+                src="./images/sale/clock-desk-tabl9.webp"
+                alt="watch front mode 1"
+                width="96"
+                height="100"
+                loading="lazy"
+              />
             </picture>
           </li>
           <li class="sale-item-picture">
             <picture>
-              <source media="(min-width:768px)" srcset="./images/sale/clock-desk-tabl5.webp 1x, 
-            ./images/sale/clock-desk-tabl6@2x.webp 2x" type="image/png">
-              <source media="(max-width:767px)" srcset="./images/sale/clock-tel7.webp 1x, 
-            ./images/sale/clock-tel8@2x.webp 2x" type="image/png">
-              <img class="watch-example" src="./images/sale/clock-desk-tabl5.webp" alt="watch front mode time" width="96"
-                height="100" loading="lazy" />
+              <source
+                media="(min-width:768px)"
+                srcset="
+                  ./images/sale/clock-desk-tabl5.webp    1x,
+                  ./images/sale/clock-desk-tabl6@2x.webp 2x
+                "
+                type="image/webp"
+              />
+              <source
+                media="(max-width:767px)"
+                srcset="
+                  ./images/sale/clock-tel7.webp    1x,
+                  ./images/sale/clock-tel8@2x.webp 2x
+                "
+                type="image/webp"
+              />
+              <img
+                class="watch-example"
+                src="./images/sale/clock-desk-tabl5.webp"
+                alt="watch front mode time"
+                width="96"
+                height="100"
+                loading="lazy"
+              />
             </picture>
           </li>
           <li class="sale-item-picture">
             <picture>
-              <source media="(min-width:768px)" srcset="./images/sale/clock-desk-tabl3.webp 1x, 
-            ./images/sale/clock-desk-tabl4@2x.webp 2x" type="image/png">
-              <source media="(max-width:767px)" srcset="./images/sale/clock-tel3.webp 1x, 
-            ./images/sale/clock-tel4@2x.webp 2x" type="image/png">
-              <img class="watch-example" src="./images/sale/clock-desk-tabl3.webp" alt="watch sadeways" width="96"
-                height="100" loading="lazy" />
+              <source
+                media="(min-width:768px)"
+                srcset="
+                  ./images/sale/clock-desk-tabl3.webp    1x,
+                  ./images/sale/clock-desk-tabl4@2x.webp 2x
+                "
+                type="image/webp"
+              />
+              <source
+                media="(max-width:767px)"
+                srcset="
+                  ./images/sale/clock-tel3.webp    1x,
+                  ./images/sale/clock-tel4@2x.webp 2x
+                "
+                type="image/webp"
+              />
+              <img
+                class="watch-example"
+                src="./images/sale/clock-desk-tabl3.webp"
+                alt="watch sadeways"
+                width="96"
+                height="100"
+                loading="lazy"
+              />
             </picture>
           </li>
           <li class="sale-item-picture">
             <picture>
-              <source media="(min-width:768px)" srcset="./images/sale/clock-desk-tabl7.webp 1x, 
-            ./images/sale/clock-desk-tabl8@2x.webp 2x" type="image/png">
-              <source media="(max-width:767px)" srcset="./images/sale/clock-tel5.webp 1x, 
-            ./images/sale/clock-tel6@2x.webp 2x" type="image/png">
-              <img class="watch-example" src="./images/sale/clock-desk-tabl7.webp" alt="watch back view" width="96"
-                height="100" loading="lazy" />
+              <source
+                media="(min-width:768px)"
+                srcset="
+                  ./images/sale/clock-desk-tabl7.webp    1x,
+                  ./images/sale/clock-desk-tabl8@2x.webp 2x
+                "
+                type="image/webp"
+              />
+              <source
+                media="(max-width:767px)"
+                srcset="
+                  ./images/sale/clock-tel5.webp    1x,
+                  ./images/sale/clock-tel6@2x.webp 2x
+                "
+                type="image/webp"
+              />
+              <img
+                class="watch-example"
+                src="./images/sale/clock-desk-tabl7.webp"
+                alt="watch back view"
+                width="96"
+                height="100"
+                loading="lazy"
+              />
             </picture>
           </li>
         </ul>
         <div class="sale-main-pic">
           <picture>
-            <source media="(min-width:768px)" srcset="./images/sale/clock-desk-tabl1x.webp 1x, 
-        ./images/sale/clock-desk-tabl2@2x.webp 2x" type="image/png">
-            <source media="(max-width:767px)" srcset="./images/sale/clock-tel1.webp 1x, 
-        ./images/sale/clock-tel2@2x.webp 2x" type="image/png">
-            <img class="watch-example" src="./images/sale/clock-desk-tabl1x.webp" alt="watch main picture" width="428"
-              height="558" loading="lazy" />
+            <source
+              media="(min-width:768px)"
+              srcset="
+                ./images/sale/clock-desk-tabl1x.webp   1x,
+                ./images/sale/clock-desk-tabl2@2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              media="(max-width:767px)"
+              srcset="
+                ./images/sale/clock-tel1.webp    1x,
+                ./images/sale/clock-tel2@2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <img
+              class="watch-example"
+              src="./images/sale/clock-desk-tabl1x.webp"
+              alt="watch main picture"
+              width="428"
+              height="558"
+              loading="lazy"
+            />
           </picture>
         </div>
       </div>
       <div class="sale-description-container">
-        <h3 class="sale-description-title">MARQ® Commander (Gen 2) - Carbon Edition</h3>
-        <p class="product-tag"> Product tag: 706587</p>
-        <div class="sale-price"><span class="price-tag">€1500</span><span class="price-crossed">€3000</span></div>
-        <p class="item-description-text">The Garmin MARQ Commander Gen 2 Carbon Edition is a modern smartwatch for
-          adventurers
-          that takes materials and features
-          to the next level. The body of the watch is made of very durable Fused Carbon Fiber material and has a
-          precise
-          AMOLED
-          touch screen. The sensitive touch screen is complemented by buttons that can be used in any conditions.</p>
+        <h3 class="sale-description-title">
+          MARQ® Commander (Gen 2) - Carbon Edition
+        </h3>
+        <p class="product-tag">Product tag: 706587</p>
+        <div class="sale-price">
+          <span class="price-tag">€1500</span
+          ><span class="price-crossed">€3000</span>
+        </div>
+        <p class="item-description-text">
+          The Garmin MARQ Commander Gen 2 Carbon Edition is a modern smartwatch
+          for adventurers that takes materials and features to the next level.
+          The body of the watch is made of very durable Fused Carbon Fiber
+          material and has a precise AMOLED touch screen. The sensitive touch
+          screen is complemented by buttons that can be used in any conditions.
+        </p>
         <ul class="sale-item-features">
           <li class="sale-features-item">
-            <p class="feature-text">Fused carbon fiber </p>
+            <p class="feature-text">Fused carbon fiber</p>
           </li>
           <li class="sale-features-item">
             <p class="feature-text">Grade-5 Titanuim</p>
