--- a/src/partials/8-contact-us.html
+++ b/src/partials/8-contact-us.html
@@ -73,7 +73,7 @@
             ./images/contact-us/contact-us-clock-desktop.webp    1x,
             ./images/contact-us/contact-us-clock-desktop@2x.webp 2x
           "
-          type="image/jpg"
+          type="image/webp"
         />
         <source
           media="(min-width: 768px)"
@@ -81,7 +81,7 @@
             ./images/contact-us/contact-us-clock-tablet.webp    1x,
             ./images/contact-us/contact-us-clock-tablet@2x.webp 2x
           "
-          type="image/jpg"
+          type="image/webp"
         />
         <source
           media="(max-width: 767px)"
@@ -89,7 +89,7 @@
             ./images/contact-us/contact-us-clock.webp    1x,
             ./images/contact-us/contact-us-clock@2x.webp 2x
           "
-          type="image/jpg"
+          type="image/webp"
         />
         <img
           src="./images/contact-us/contact-us-clock.webp"
