--- a/src/partials/3-about-us.html
+++ b/src/partials/3-about-us.html
@@ -1,4 +1,4 @@
-<section class="about" id="about">
+<section class="about section-animation" id="about">
   <div class="container">
     <div class="about-welcome">
       <h2 class="about-title">About Us</h2>
@@ -14,36 +14,36 @@
         your personality and style. So why settle for anything less than the
         best?
       </p>
-      <a class="about-btn" href="catalog">View catalog</a>
+      <a class="about-btn" href="#catalog">View catalog</a>
     </div>
     <div class="about-img-div">
       <picture>
         <source
           media="(min-width: 1280px)"
           srcset="
-            ./images/abt-us/abt_us_desktop.jpg    1x,
-            ./images/abt-us/abt_us_desktop@2x.jpg 2x
+            ./images/abt-us/abt_us_desktop.webp    1x,
+            ./images/abt-us/abt_us_desktop@2x.webp 2x
           "
-          type="image/jpg"
+          type="image/webp"
         />
         <source
           media="(min-width: 768px)"
           srcset="
-            ./images/abt-us/abt_us_tablet.jpg    1x,
-            ./images/abt-us/abt_us_tablet@2x.jpg 2x
+            ./images/abt-us/abt_us_tablet.webp    1x,
+            ./images/abt-us/abt_us_tablet@2x.webp 2x
           "
-          type="image/jpg"
+          type="image/webp"
         />
         <source
           media="(max-width: 767px)"
           srcset="
-            ./images//abt-us/abt_us.jpg   1x,
-            ./images/abt-us/abt_us@2x.jpg 2x
+            ./images//abt-us/abt_us.webp   1x,
+            ./images/abt-us/abt_us@2x.webp 2x
           "
-          type="image/jpg"
+          type="image/webp"
         />
         <img
-          src="./images/abt-us/abt_us.jpg"
+          src="./images/abt-us/abt_us.webp"
           alt="team"
           width="108"
           height="44"
