--- a/src/partials/3-about-us.html
+++ b/src/partials/3-about-us.html
@@ -1,4 +1,4 @@
-<section class="about section-animation" id="about">
+<section class="about section-animation" id="about-us">
   <div class="container">
     <div class="about-welcome">
       <h2 class="about-title">About Us</h2>
